[tool.poetry]
name = "filter-tools"
version = "0.1.0"
description = "Centralized toolbox for filtering"
authors = ["Tahn Thawainin <pzt002@auburn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "^1.26.4"
pytest = "^8.1.1"
scipy = "^1.13.0"
# python-utilities = {path="C:\\Users\\pzt0029\\Documents\\Python_Utilities\\python_utilities", develop=true} #Local
python-utilities = {git="https://github.com/TahnT-Auburn/python_utilities.git"}                           #Git


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
